--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -3,6 +3,11 @@
   border: 4px solid midnightblue;
   width: 400px;
   height: 300px;
+
+  /* change display to flex, then justify and align center */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .box {
