--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,5 +1,6 @@
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
 }
@@ -24,6 +25,73 @@ body {
 
 .card {
   border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  box-shadow: 2px 4px 16px rgba(0, 0, 0, 0.06);
   border-radius: 4px;
+}
+
+/* solution */
+
+body {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+}
+
+.header {
+  font-size: 32px;
+  font-family: 'Ubuntu', sans-serif, Arial, Helvetica, sans-serif;
+  font-weight: 900;
+  display: flex;
+  align-items: center;
+  margin: 0;
+  padding: 16px;
+}
+
+.content {
+  display: flex;
+  flex: 1;
+}
+
+.sidebar {
+  flex-shrink: 0;
+  width: 300px;
+  padding: 16px;
+}
+
+ul {
+  flex-direction: column;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  margin-bottom: 16px;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  font-size: 24px;
+}
+
+.flashcards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  flex: 5 1 0;
+  gap: 16px;
+  padding: 32px;
+}
+
+.card {
+  width: 300px;
+  height: 300px;
+  padding: 32px;
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
