--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -25,7 +25,7 @@ html {
 }
 
 .sidebar {
-  background-color: #005B94;
+  background-color: #005b94;
 }
 
 .nav {
@@ -33,7 +33,7 @@ html {
 }
 
 .article {
-  background-color: #7E1DC3;
+  background-color: #7e1dc3;
 }
 
 .footer {
@@ -45,4 +45,35 @@ html {
   font-family: sans-serif;
   color: white;
   text-align: left;
+}
+
+/* solution */
+
+.container {
+  display: grid;
+  gap: 15px;
+  grid-template-columns: 300px 900px;
+  grid-template-rows: 100px 100px 500px 100px;
+  /* grid-template: 100px 100px 100px 100px 100px 100px 100px 100px / 300px 300px 300px 300px;
+  grid-template-areas:
+    'header header header header'
+    'sidebar nav nav nav'
+    'sidebar article article article'
+    'sidebar article article article'
+    'sidebar article article article'
+    'sidebar article article article'
+    'sidebar article article article'
+    'footer footer footer footer'; */
+}
+
+.header {
+  grid-column: 1 / 3;
+}
+
+.sidebar {
+  grid-row: 2 / 4;
+}
+
+.footer {
+  grid-column: 1 / 3;
 }
